--- a/projects/api/composer.json
+++ b/projects/api/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^11.0",
         "laravel/passport": "^12.0",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-medialibrary": "^11.4"
+        "spatie/laravel-medialibrary": "^11.4",
+        "spatie/laravel-translatable": "^6.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -20,7 +21,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
         "phpunit/phpunit": "^11.0.1",
-        "spatie/laravel-ignition": "^2.4"
+        "spatie/laravel-ignition": "^2.4",
+        "spatie/laravel-web-tinker": "^1.9"
     },
     "autoload": {
         "psr-4": {
