--- a/projects/api/composer.json
+++ b/projects/api/composer.json
@@ -9,7 +9,6 @@
         "althinect/filament-spatie-roles-permissions": "^2.2",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.0",
-        "laravel/passport": "^12.0",
         "laravel/tinker": "^2.9",
         "spatie/laravel-medialibrary": "^11.4",
         "spatie/laravel-translatable": "^6.6"
@@ -56,8 +55,8 @@
         "post-setup-custom":[
             "@php artisan optimize:clear",
             "@php artisan migrate",
-            "@php artisan make:filament-user --name Owner --email admin@ertumar.kz --password ertumar@2024 -q",
-            "@php artisan permission"
+            "@php artisan make:filament-user --name Max --email developer@ertumar.kz --password maxim@2024 -q",
+            "@php artisan permission:sync"
         ]
     },
     "extra": {
