--- a/projects/docker-compose.prod.yml
+++ b/projects/docker-compose.prod.yml
@@ -30,13 +30,9 @@ services:
     volumes:
       - ./web:/var/projects/web
     working_dir: /var/projects/web
+    entrypoint: [ "/bin/sh", "-c", "npm install && npm run build && node ./.output/server/index.mjs" ]
     environment:
       NUXT_HOST: 0.0.0.0
     tty: true
     networks:
       - zhbn-network
-    command:
-      - "cd ./web"
-      - "npm install"
-      - "npm run build"
-      - "npm run start"
