--- a/core/docker-compose.prod.yml
+++ b/core/docker-compose.prod.yml
@@ -40,10 +40,10 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_USER: ${DB_USERNAME:-zhbn}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_PASSWORD: ${DB_PASSWORD:-ertumar!kz}
       MYSQL_DATABASE: ${DB_DATABASE:-zhbn}
       MYSQL_ROOT_HOST: "%"
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-ertumar!kz}
     logging:
       driver: "json-file"
       options:
