--- a/core/local/caddy/Caddyfile
+++ b/core/local/caddy/Caddyfile
@@ -1,16 +1,10 @@
-api.zhbn.local {
+api.zhbn-pomosh-kunaev.kz {
     root * /var/projects/api/public
     encode gzip zstd
     file_server
     php_fastcgi api:9000
-
-    # SSL Configuration
-    tls /data/local-certs/api.zhbn.local.pem /data/local-certs/api.zhbn.local-key.pem
 }
 
-zhbn.local {
+zhbn-pomosh-kunaev.kz {
     reverse_proxy web:3000
-
-    # SSL Configuration
-    tls /data/local-certs/zhbn.local.pem /data/local-certs/zhbn.local-key.pem
 }
