--- a/projects/web/package.json
+++ b/projects/web/package.json
@@ -10,8 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt-alt/proxy": "^2.5.8",
+    "@nuxt/ui": "^2.17.0",
+    "axios": "^1.7.2",
     "nuxt": "^3.11.2",
+    "nuxt-swiper": "^1.2.2",
+    "showdown": "^2.1.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@nuxt/image": "^1.7.0"
   }
 }
